# hastinus

./: .gitignore  AstinusHS.cabal  hastinus.cabal
src/: Accentuate.hs  BibLaTeX.hs  BibLaTeXParser.hs  LaTeXParser.hs  Main.hs
test/: Main_Test.hs
